tests/error/type_match/base_case_pointer_const_propagation1.bz
// error: unable to match value of type 'mut *int32' to '*mut int32'
// note: mismatched mutability of types 'int32' and 'mut int32'
function test()
{
	mut i = 0;
	mut cpi: *int32 = &i;
	let _: *mut int32 = cpi;
}
